force-app/main/default/objects/Action_Setting__mdt/Action_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Action Setting</label>
    <pluralLabel>Action Settings</pluralLabel>
</CustomObject>