force-app/main/default/objects/Action_Setting__mdt/fields/Assignment_Setting__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Setting__c</fullName>
    <label>Assignment Setting</label>
    <referenceTo>Assignment_Setting__mdt</referenceTo>
    <relationshipLabel>Action Settings</relationshipLabel>
    <relationshipName>Action_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>