force-app/main/default/objects/Action_Setting__mdt/fields/TransferToQueue__c.field-meta.xml
<CustomField>
    <fullName>TransferToQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TransferToQueue</label>
    <type>Checkbox</type>
</CustomField>