force-app/main/default/objects/Action_Setting__mdt/fields/TransferToUser__c.field-meta.xml
<CustomField>
    <fullName>TransferToUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TransferToUser</label>
    <type>Checkbox</type>
</CustomField>